--- a/cultural-food/public/index.html
+++ b/cultural-food/public/index.html
@@ -29,6 +29,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <audio autoplay loop>
+      <source src="./always with me.mp3" type="audio/mp3">
+      <!-- <source src="./First Love.mp3" type="audio/mp3" > -->
+    </audio>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
